--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
-#List of contributors.
-Kelvin okoye <kelvinokoye413@gmail.com>
-Afia Y Akuamoah <afia.yakuamoah@gmail.com>
+#We have 2 contributors.
+
+   1) Bright Daniel
+   2) 
