--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
-#We have 2 contributors.
+# This file lists all individuals having contributed content to the repository.
+# For how it is generated, see `hack/generate-authors.sh`.
 
-   1) Bright Daniel
-   2) 
+Oyebamiji Mustapha <oyebamijimustapha44@gmail.com>
+Chibuzo Akana <akanachibuzo@gmail.com>
